--- a/app/src/main/res/layout/ass_task.xml
+++ b/app/src/main/res/layout/ass_task.xml
@@ -10,6 +10,7 @@
         android:id="@+id/editTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
@@ -24,13 +25,14 @@
         android:id="@+id/editDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="310dp"
+        app:layout_constraintTop_toBottomOf="@+id/editTitle"
         tools:ignore="MissingConstraints" />
 
     <Button
