--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -42,22 +42,26 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
 
         <TextView
             android:id="@+id/userInfoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="13dp"
+            android:layout_marginEnd="116dp"
             android:layout_toStartOf="@+id/profile_image"
             android:text="TextView" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="56dp"
+            android:layout_height="58dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="135dp"
+            android:layout_marginEnd="4dp"
             android:src="@drawable/ic_launcher_background"
             app:civ_border_color="#FF000000"
             app:civ_border_width="2dp" />
