--- a/app/src/main/res/layout/ass_task.xml
+++ b/app/src/main/res/layout/ass_task.xml
@@ -8,8 +8,8 @@
 
     <EditText
         android:id="@+id/editTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginTop="150dp"
         android:ems="10"
         android:hint="Title"
@@ -23,8 +23,8 @@
 
     <EditText
         android:id="@+id/editDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
         android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Description"
@@ -39,10 +39,13 @@
         android:id="@+id/button"
         android:layout_width="200dp"
         android:layout_height="77dp"
+        android:backgroundTint="#6C6F9F"
         android:text="Add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/editDescription"
+        app:layout_constraintVertical_bias="0.138" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
