--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <fragment
         android:id="@+id/fragment_tasklist"
-        android:name="com.estealexis.todoestealexis.tracklist.TaskListFragment"
+        android:name="com.estealexis.todoestealexis.tasklist.TaskListFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
