--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+
+        <variable
+            name="task"
+            type="com.estealexis.todoestealexis.tasklist.Task" />
+    </data>
+
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -9,13 +17,22 @@
     <TextView
         android:id="@+id/task_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="42dp"
         android:fontFamily="sans-serif"
+        android:text="@{task.title}"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/task_descripiton"
+        android:layout_width="match_parent"
+        android:layout_height="46dp"
+        android:fontFamily="sans-serif"
+        android:text="@{task.description}"
         android:textSize="20sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <ImageButton
             android:id="@+id/imageButton3"
@@ -36,3 +53,4 @@
     </RelativeLayout>
 
 </LinearLayout>
+</layout>
