--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
     app:startDestination="@id/AuthenticationFragment">
     <fragment
@@ -15,4 +16,9 @@
         android:id="@+id/signupFragment"
         android:name="com.estealexis.todoestealexis.auth.SignupFragment"
         android:label="SignupFragment" />
+    <fragment
+        android:id="@+id/taskListFragment"
+        android:name="com.estealexis.todoestealexis.tasklist.TaskListFragment"
+        android:label="fragment_task_list"
+        tools:layout="@layout/fragment_task_list" />
 </navigation>
