--- a/app/src/main/res/layout/user_info.xml
+++ b/app/src/main/res/layout/user_info.xml
@@ -80,6 +80,13 @@
             android:backgroundTint="#6C6F9F"
             android:text="Prendre une photo" />
 
+        <Button
+            android:id="@+id/btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6C6F9F"
+            android:text="Deconnexion" />
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
