--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/signup_lastname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/black"
                 android:ems="10"
                 android:hint="lastname"
                 android:inputType="textPersonName" />
